[metadata]
name = gists.py
version = 1.0.3
description = A simple asynchronous python wrapper for the GitHub Gists API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WitherredAway/gists.py
author = Witherr
author_email = sdssouvic99@gmail.com
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Issue Tracker = https://github.com/WitherredAway/gists.py/issues

[options]
packages = find:
python_requires = >=3.8
install_requires =
    aiohttp == 3.8.1
